# FlowTrack

./: CMakeLists.txt  README.md
resources/: migration.sql  style.qss
scripts/: git-hook-post-commit  install-hooks.sh
src/: Main.qml  main.cpp  resources.qrc
src/app/: App.cpp  App.h
src/controller/: AppController.cpp  AppController.h
src/dashboard/inc/: RegisterRepoDialog.h  mainwindow.h
src/dashboard/src/: RegisterRepoDialog.cpp  mainwindow.cpp
src/dashboard/ui/: RegisterRepoDialog.ui  mainwindow.ui
src/db/: Database.cpp  Database.h
src/models/: GitEvent.h
src/processor/: EventProcessor.cpp  EventProcessor.h
src/repositories/inc/: RepositoriesPage.h
src/repositories/src/: RepositoriesPage.cpp
src/repositories/ui/: RepositoriesPage.ui
src/server/: EventServer.cpp  EventServer.h
